fix overflow

--- a/demo/css/style.css
+++ b/demo/css/style.css
@@ -45,6 +45,7 @@ html, body{
 	height:  100%;
 	width:  300px;
 	background:  #fff;
+	overflow-y:  auto;
 }
 
 .microcomps ul{
